minor fixes, added a portfolio page for the portfolio website itself

--- a/public/portfolio/index.html
+++ b/public/portfolio/index.html
@@ -24,6 +24,14 @@
             <span class="panel-3">Internship at Marel</span>
         </div>
     </div>
+    <div onclick="window.location.href='portfolio.html'" class="card">
+        <div class="card-bkg" id="portfolio"></div>
+        <span class="emoticon">👤</span>
+        <div class="card-content">
+            <span class="panel-4">September 2025</span>
+            <span class="panel-3">Online Portfolio Website</span>
+        </div>
+    </div>
     <div onclick="window.location.href='skies.html'" class="card">
         <div class="card-bkg" id="skies"></div>
         <span class="emoticon">☁️</span>
