--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
                 <p class="text">•</p>
                 <a class="button-1" href="photo.html">Photography</a>
             </div>
-            <a class="button-2 mobile-only" href="">Resume link</a>
+            <a class="button-2 mobile-only" href="Anton%20Kovtoniuk.pdf">Resume link</a>
         </div>
 
         <div class="screen" id="about">
@@ -75,7 +75,7 @@
                         <p>I’m a UX and product designer based in The Hague, Netherlands.</p>
                         <p>I specialise in research analysis, stakeholder communication, concept presentations, conducting user interviews and user testing. I am also proficient in Figma and comfortable working with design systems and component-based prototyping.</p>
                     </section>
-                    <a class="button-2 desktop-only" href="">Resume link</a>
+                    <a class="button-2 desktop-only" href="Anton%20Kovtoniuk.pdf">Resume link</a>
                 </div>
             </div>
             <div class="nav mobile-only">
