--- a/public/portfolio/portfolio.html
+++ b/public/portfolio/portfolio.html
@@ -51,9 +51,9 @@
         <p class="text" style="font-variant: all-small-caps">Prototyping&nbsp;| Web&nbsp;design&nbsp;| Responsive&nbsp;design&nbsp;| Front-end&nbsp;development</p>
         <h2 class="heading-2">Features</h2>
         <ul class="text">
-            <li>A responsive layout with a separate design for mobile devices.</li>
+            <li>A responsive design with a separate layout for mobile devices.</li>
             <li>Interactive elements via CSS transitions and JavaScript.</li>
-            <li>A coherent and easily scalable website structure.</li>
+            <li>A coherent and easily scalable website codebase.</li>
         </ul>
     </article>
 </div>
