Minor alignment fix on highly scaled screens (might have to work with clamp() at some point to decrease font size on extremely small interfaces)

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
         <div class="screen" id="landing">
             <img class="mobile-only" src="images/Anton%20Photo%20Mobile.png" alt="">
             <div class="header">
-                <a class="title" style="padding-bottom: 8px" href="#landing">Anton Kovtoniuk</a>
+                <a class="title" style="padding-bottom: 8px; text-align: center" href="#landing">Anton Kovtoniuk</a>
                 <h1 class="heading-1">UX <span style="font-family: 'Playfair Display', serif">&</span> Product Designer</h1>
             </div>
             <div class="socials desktop-only">
