--- a/public/index.html
+++ b/public/index.html
@@ -128,7 +128,7 @@
                     </a>
                 </div>
             </div>
-            <a class="footer" href="https://www.futurefonts.com/kostas-bartsokas/canicule-display" target="_blank">Canicule Display v0.4 Trial Ver. by Kostas Bartsokas</a>
+            <a class="footer" href="https://www.futurefonts.com/kostas-bartsokas/canicule-display" target="_blank">Canicule Display v0.4 Trial Ver. font by Kostas Bartsokas</a>
             <a class="footer" href="https://github.com/480-Design/Solar-Icon-Set" target="_blank">Solar Icons Set by 480Design</a>
         </div>
     </main>
