Temporarily linked Photography to the old Notion photography page

--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
                 <p class="text desktop-only">•</p>
                 <a class="button-1" href="/portfolio">Portfolio</a>
                 <p class="text">•</p>
-                <a class="button-1" href="photo.html">Photography</a>
+                <a class="button-1" href="https://antikovt.notion.site/photography" target="_blank">Photography</a>
             </div>
             <a class="button-2 mobile-only" href="Anton%20Kovtoniuk.pdf">Resume link</a>
         </div>
@@ -83,7 +83,7 @@
                 <p class="text desktop-only">•</p>
                 <a class="button-1" href="/portfolio">Portfolio</a>
                 <p class="text">•</p>
-                <a class="button-1" href="photo.html">Photography</a>
+                <a class="button-1" href="https://antikovt.notion.site/photography" target="_blank">Photography</a>
             </div>
         </div>
 
