Added a portfolio page for the game design project

--- a/public/portfolio/index.html
+++ b/public/portfolio/index.html
@@ -56,6 +56,14 @@
             <span class="panel-3">Tripp3r App Design</span>
         </div>
     </div>
+    <div onclick="window.location.href='mallow-mystery.html'" class="card">
+        <div class="card-bkg" id="mm"></div>
+        <span class="emoticon">🍬</span>
+        <div class="card-content">
+            <span class="panel-4">Sep 2023 - Jan 2024</span>
+            <span class="panel-3">"Mallow Mystery"<br>game demo</span>
+        </div>
+    </div>
 </div>
 </body>
 </html>
